# gently-deabe

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: highNA_diSPIM_Nuclear.example.yaml
examples/: gently_integration.py
proof/: PROOF_ARTIFACT.md
src/gently_deabe/: __init__.py  cli.py  convert.py  inference.py  model.py  pipeline.py  registry.py  server.py
tests/: test_arch.py  test_block_weight.py
