[project]
name = "gently-deabe"
version = "0.1.0"
description = "PyTorch port of the DeAbe / 3D-RCAN deep-learning pipeline (Guo et al., Nat. Commun. 2025), packaged for on-demand denoising of diSPIM volumes from gently."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "P. S. Kesavan" },
]
license = { text = "MIT" }
dependencies = [
    "torch>=2.4",
    "numpy>=1.24",
    "scipy>=1.11",
    "tifffile>=2024.1",
    "h5py>=3.10",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "httpx>=0.26",
    "matplotlib>=3.8",
]

[project.scripts]
gently-deabe = "gently_deabe.cli:main"
gently-deabe-server = "gently_deabe.cli:server_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gently_deabe"]
